--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
-    "factory.ts": "^0.5.0",
     "husky": "^3.0.1",
     "lerna": "^3.16.4",
     "tslint": "^5.20.0",
@@ -11,7 +10,7 @@
     "tslint-react": "^4.1.0",
     "tslint-react-a11y": "^1.1.0",
     "tslint-react-hooks": "^2.2.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.2"
   },
   "husky": {
     "hooks": {
@@ -43,5 +42,8 @@
   },
   "resolutions": {
     "handlebars": "^4.4.3"
+  },
+  "dependencies": {
+    "factory.ts": "^0.5.0"
   }
 }
