--- a/packages/linode-js-sdk/package.json
+++ b/packages/linode-js-sdk/package.json
@@ -53,7 +53,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
-    "@types/ramda": "^0.26.19",
+    "@types/ramda": "^0.26.33",
     "@types/yup": "^0.26.22",
     "babel-plugin-module-resolver": "^3.2.0",
     "concurrently": "^4.1.1",
@@ -62,6 +62,7 @@
     "npm-dts-webpack-plugin": "^1.1.10",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
+    "ts-toolbelt": "^4.9.32",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
